--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </header>
 <!--Instructions-->
         <div class="instructions">
-          <p class="intro__desc">Calling some Movie GIF Fun. Just type in your favorite movie quote. <br><strong>Hasta la vista, baby!</strong></p>
+          <p class="intro__desc">Explore Movie GIF's. <br><strong>Hasta la vista, baby!</strong></p>
           <br>
         </div>
 <!--Game-->
@@ -36,7 +36,7 @@
           <br>
             <div id="form">
               <form id="quote-form">
-                <label for="quote-input">Add another quote my friend:</label>
+                <label for="quote-input">Add quote here:</label>
                 <input type="text" id="quote-input">
                 <input id="addQuote" type="submit" value="JUST DO IT">
               </form>
