--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </header>
 <!--Instructions-->
         <div class="instructions">
-          <p class="intro__desc">Enjoy!<br><strong>Hasta la vista, baby!</strong></p>
+          <p class="intro__desc"><strong>Hasta la vista, baby!</strong></p>
           <br>
         </div>
 <!--Game-->
