--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <div class="col-md-8 text-center">
         <header>
         <img src="">
-        <h1 class="intro__title">Explore GIFs</h1>
+        <h1 class="intro__title">GIFast</h1>
         </header>
 <!--Instructions-->
         <div class="instructions">
-          <p class="intro__desc"><strong>Hasta la vista, baby!</strong></p>
+          <p class="intro__desc"><strong>Ultra fast GIF search.</strong></p>
           <br>
         </div>
 <!--Game-->
