--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <form id="quote-form">
                 <label for="quote-input">Add quote here:</label>
                 <input type="text" id="quote-input">
-                <input id="addQuote" type="submit" value="JUST DO IT">
+                <input id="addQuote" type="submit" value="ADD TO LIST">
               </form>
               <br>
             </div>
