--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <br>
             <div id="form">
               <form id="quote-form">
-                <label for="quote-input">Add quote here:</label>
+                <label for="quote-input">Type keywords here:</label>
                 <input type="text" id="quote-input">
                 <input id="addQuote" type="submit" value="ADD TO LIST">
               </form>
