--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="col-md-12">
         <footer class="text-center">
           <div class="container">
-            <nav class="social"><a class="social__icon" href="https://twitter.com/chuygz"><i class="fa fa-twitter"></i></a> | <a class="social__icon" href="github.com/chuymgzz"><i class="fa fa-github"></i></a> | <a class="social__icon" href="https://www.linkedin.com/feed/"><i class="fa fa-linkedin"></i></a>
+            <nav class="social"><a class="social__icon" href="https://twitter.com/chuygz"><i class="fa fa-twitter"></i></a> | <a class="social__icon" href="https://www.github.com/chuymgzz"><i class="fa fa-github"></i></a> | <a class="social__icon" href="https://www.linkedin.com/feed/"><i class="fa fa-linkedin"></i></a>
             <br> &copy; chuy!</p>
           </div>
         </footer>
